@@ -31,5 +31,5 @@ Imports System.Runtime.InteropServices
 ' by using the '*' as shown below:
 ' <Assembly: AssemblyVersion("1.0.*")> 
 
-<Assembly: AssemblyVersion("3.1.6.1")>
-<Assembly: AssemblyFileVersion("3.1.6.1")>
+<Assembly: AssemblyVersion("3.1.7.0")>
+<Assembly: AssemblyFileVersion("3.1.7.0")>
